Remove mapping/setting distinction in TableParameters
Currently a table's column policy is special in that opposed to all
other table options set via `WITH (...)` it's not stored internally as a
index setting but within the mapping.

The `mapping` will be gone as part of https://github.com/crate/crate/issues/11939
This is a first step into that direction.

The storage format remains the same for now, but the client node no
longer arranges `WITH` options into that format.